--- a/index.html
+++ b/index.html
@@ -618,15 +618,15 @@
     
     // 为每个按钮添加点击事件
     windowsButton.addEventListener('click', function() {
-        window.location.href = 'myweb/test1.apk'; // 替换为实际文件的路径
+        window.location.href = 'test1.apk'; // 替换为实际文件的路径
     });
 
     macButton.addEventListener('click', function() {
-        window.location.href = 'myweb/test1.apk'; // 替换为实际文件的路径
+        window.location.href = 'test1.apk'; // 替换为实际文件的路径
     });
 
     linuxButton.addEventListener('click', function() {
-        window.location.href = 'myweb/test1.apk'; // 替换为实际文件的路径
+        window.location.href = 'test1.apk'; // 替换为实际文件的路径
     });
 </script>
 
@@ -952,4 +952,5 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 
 </script>
+
 
