--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 <main class="container">
     <section class="content-section">
         <h2 class="section-title"><i class="fas fa-link"></i> 访问我们的主体网站</h2>
-        <p>主题网站没有固定域名，此网站只作为跳转途径</p>
+        <p>主体网站没有固定域名，此网站只作为跳转途径</p>
         <p>通过下面的链接可以访问我们的主页面、下载中心以及社区。</p>
         <div class="download-options">
             <!-- 主页面卡片 -->
@@ -353,3 +353,4 @@
 
 </body>
 </html>
+
