--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
             <h1 class="header-title">Jvav</h1>
             <div class="nav-links">
                 <!-- 主页面链接 -->
-                <a href="http://59e04476.r20.cpolar.top" id="main-link" class="nav-link" target="_blank">主页面</a>
+                <a href="http://http://6d49d2c3.r20.cpolar.top" id="main-link" class="nav-link" target="_blank">主页面</a>
 
                 <!-- 下载中心链接 -->
-                <a href="http://59e04476.r20.cpolar.top/download.html" id="download-link" class="nav-link" target="_blank">下载中心</a>
+                <a href="http://http://6d49d2c3.r20.cpolar.top/download.html" id="download-link" class="nav-link" target="_blank">下载中心</a>
 
                 <!-- 社区链接 -->
-                <a href="http://59e04476.r20.cpolar.top/community.html" id="community-link" class="nav-link" target="_blank">社区</a>
+                <a href="http://http://6d49d2c3.r20.cpolar.top/community.html" id="community-link" class="nav-link" target="_blank">社区</a>
             </div>
         </div>
     </header>
@@ -315,7 +315,7 @@
                 <i class="fas fa-home"></i>
                 <h3>主页面</h3>
                 <p>访问我们的官方主页，了解更多信息。</p>
-                <a href="http://59e04476.r20.cpolar.top" id="main-link" class="btn animated-btn" target="_blank">前往主页面</a>
+                <a href="http://http://6d49d2c3.r20.cpolar.top" id="main-link" class="btn animated-btn" target="_blank">前往主页面</a>
             </div>
 
             <!-- 下载中心卡片 -->
@@ -323,7 +323,7 @@
                 <i class="fas fa-download"></i>
                 <h3>下载中心</h3>
                 <p>在这里您可以找到所有的下载链接。</p>
-                <a href="http://59e04476.r20.cpolar.top/download.html" id="download-link" class="btn animated-btn" target="_blank">访问下载中心</a>
+                <a href="http://http://6d49d2c3.r20.cpolar.top/download.html" id="download-link" class="btn animated-btn" target="_blank">访问下载中心</a>
             </div>
 
             <!-- 社区卡片 -->
@@ -331,7 +331,7 @@
                 <i class="fas fa-users"></i>
                 <h3>社区</h3>
                 <p>加入我们的社区，与其他用户互动。</p>
-                <a href="http://59e04476.r20.cpolar.top/community.html" id="community-link" class="btn animated-btn" target="_blank">加入社区</a>
+                <a href="http://http://6d49d2c3.r20.cpolar.top/community.html" id="community-link" class="btn animated-btn" target="_blank">加入社区</a>
             </div>
         </div>
         <p>无法进入主体网站请联系2877634587@qq.com</p>
@@ -353,4 +353,3 @@
 
 </body>
 </html>
-
